--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "pag:build:production",
+            "firebaseProject": "randompag-8a4bc",
+            "firebaseHostingSite": "randompag-8a4bc"
+          }
         }
       }
     }
